added some basic code to homePage.htm and created new css file for web design

--- a/homePage.htm
+++ b/homePage.htm
@@ -1,10 +1,21 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website</title>
-</head>
-<body>
-    
-</body>
-</html>
+<html>
+    <head>
+        <title>Home - Website</title>
+    </head>
+    <link href="webDesign.css" rel="stylesheet">
+    <body>
+        <header>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="https://liu.etownmca.com/build_nav_bar/landing_page.htm"></a>
+                    </li>
+                </ul>
+            </nav>
+            <h1>Welcome To Medieval Studios!</h1>
+        </header>
+    </body>
+
+
+
+</html>>
