created web design for the login and register page

--- a/webDesign/credits.htm
+++ b/webDesign/credits.htm
@@ -2,7 +2,7 @@
     <head>
         <title>Credits - Medieval Studios</title>
     </head>
-    <link rel="icon" type="image/x-icon" href="swords.png">
+    <link rel="icon" type="image/x-icon" href="images/swords.png">
     <link href="webDesign.css" rel="stylesheet">
     <body>
         <header>
@@ -21,7 +21,7 @@
                         <a href="leaderboard.htm">Leaderboard</a>
                     </li>
                     <li style="float: right">
-                        <a  href="login.php">Login</a>
+                        <a  href="login.php">Login/Register</a>
                     </li>
                     <li style="float: right">
                         <a href="">Coins: {10}</a>
