Added movement to the player and plan to add an enemy to start the battle

--- a/CombatSystem/h.htm
+++ b/CombatSystem/h.htm
@@ -9,4 +9,12 @@
 </body>
 <canvas style="background-color: black;width: 1000px; height: 500px;"></canvas>
 <script src="j.js"></script>
+
+<div id="playerChoice">
+    <button id="Option1">Fight</button>
+    <button id="Option2">Magic</button>
+    <button id="Option3">Item</button>
+    <button id="Option4">Flee</button>
+</div>
+
 </html>
