added images and made significant decorations to web design

--- a/webDesign/credits.htm
+++ b/webDesign/credits.htm
@@ -28,6 +28,12 @@
                     </li>
                 </ul>
             </nav>
+            <div>
+            <img class="image" src="images/shield.png" width="20%" height="50%" style="float:right; padding: 80px;">
+            </div>
+            <div>
+            <img class="image" src="images/shield.png" width="20%" height="50%" style="float:left; padding: 80px;">
+            </div>
             <h1 class="title"><u>Credits</u></h1>
         </header>
         <main>
