--- a/webDesign/leaderboard.htm
+++ b/webDesign/leaderboard.htm
@@ -28,6 +28,12 @@
                     </li>
                 </ul>
             </nav>
+            <div>
+            <img class="image" src="images/trophy.png" width="20%" height="40%" style="float:right; padding: 100px;">
+            </div>
+            <div>
+            <img class="image" src="images/trophy.png" width="20%" height="40%" style="float:left; padding: 100px;">
+            </div>
             <h1 class="title"><u>Leaderboard</u></h1>
         </header>
         <main>
