--- a/webDesign/instructions.htm
+++ b/webDesign/instructions.htm
@@ -28,7 +28,13 @@
                     </li>
                 </ul>
             </nav>
-            <h1 class="title"><u>How The Game Works</u></h1>
+            <div>
+            <img class="image" src="images/scroll.png" width="20%" height="40%" style="float:right; padding: 100px;">
+            </div>
+            <div>
+            <img class="image" src="images/scroll.png" width="20%" height="40%" style="float:left; padding: 100px;">
+            </div>
+            <h1 class="title"><u>Instructions</u></h1>
         </header>
         <main>
         </main>
