created game canvas and made some small changes to web design

--- a/webDesign/playNow.htm
+++ b/webDesign/playNow.htm
@@ -4,6 +4,7 @@
     </head>
     <link rel="icon" type="image/x-icon" href="images/swords.png">
     <link href="webDesign.css" rel="stylesheet">
+    <script src="mainGame.js"></script>
     <body>
         <header>
             <nav>
@@ -27,7 +28,8 @@
                         <a href="">Coins: {10}</a>
                     </li>
                 </ul>
-            </nav>
+            </nav><br>
+            <canvas style="background-color:#a50034; width: 1000; height: 415"></canvas>
         </header>
         <main>
         </main>
