added some credits to credits screen

--- a/webDesign/credits.htm
+++ b/webDesign/credits.htm
@@ -35,6 +35,12 @@
             <img class="image" src="images/shield.png" width="20%" height="50%" style="float:left; padding: 80px;">
             </div>
             <h1 class="title"><u>Credits</u></h1>
+            <h3 class="credits">Favicon Image: <a href="https://www.flaticon.com/free-icons/war" title="war icons">War icons created by Freepik - Flaticon</a></h3>
+            <h3 class="credits">Home Screen Image: <a href="https://www.rawpixel.com/image/18420251">Created by RawPixel</a></h3>
+            <h3 class="credits">Instructions Screen Image: <a href="https://www.vecteezy.com/free-png/medieval-scroll">Medieval Scroll PNGs by Vecteezy</a></h3>
+            <h3 class="credits">Credits Screen Image: <a href="https://www.vecteezy.com/free-png/protective-shield">Protective Shield PNGs by Vecteezy</a></h3>
+            <h3 class="credits">Leaderboards Screen Image: <a href="https://www.cleanpng.com/png-golden-trophy-for-achievement-8188779/">Created by CleanPNG</a></h3>
+            <h3 class="credits">Login/Register Screen Image: <a href="https://toppng.com/free-image/medival-knight-PNG-free-PNG-Images_29205">Created by TopPNG</a></h3>
         </header>
         <main>
         </main>
