Added Onclick to canvas

--- a/webDesign/playNow.htm
+++ b/webDesign/playNow.htm
@@ -28,7 +28,8 @@
                     </li>
                 </ul>
             </nav><br>
-            <canvas style="background-color:#a50034; width: 1000; height: 415"></canvas>
+            <canvas style="background-color:#a50034; width: 1000; height: 415"
+            onmousedown="press(event)"></canvas>
         </header>
         <main>
         </main>
