added footer to each page

--- a/webDesign/credits.htm
+++ b/webDesign/credits.htm
@@ -42,7 +42,8 @@
             <h3 class="credits">Leaderboards Screen Image: <a href="https://www.cleanpng.com/png-golden-trophy-for-achievement-8188779/">Created by CleanPNG</a></h3>
             <h3 class="credits">Login/Register Screen Image: <a href="https://toppng.com/free-image/medival-knight-PNG-free-PNG-Images_29205">Created by TopPNG</a></h3>
         </header>
-        <main>
-        </main>
+        <footer><br><br>
+            <p>Copyright 2025. All rights reserved.</p>
+        </footer>
     </body>
 </html>
