--- a/webDesign/instructions.htm
+++ b/webDesign/instructions.htm
@@ -36,7 +36,8 @@
             </div>
             <h1 class="title"><u>Instructions</u></h1>
         </header>
-        <main>
-        </main>
+        <footer><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <p>Copyright 2025. All rights reserved.</p>
+        </footer>
     </body>
 </html>
