--- a/webDesign/leaderboard.htm
+++ b/webDesign/leaderboard.htm
@@ -35,8 +35,9 @@
             <img class="image" src="images/trophy.png" width="20%" height="40%" style="float:left; padding: 100px;">
             </div>
             <h1 class="title"><u>Leaderboard</u></h1>
-        </header>
-        <main>
-        </main>
+        </header><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <footer>
+            <p>Copyright 2025. All rights reserved.</p>
+        </footer>
     </body>
 </html>
