--- a/webDesign/playNow.htm
+++ b/webDesign/playNow.htm
@@ -31,8 +31,9 @@
             <canvas style="background-color:#a50034; width: 1000; height: 415"
             onmousedown="press(event)"></canvas>
         </header>
-        <main>
-        </main>
+        <footer>
+            <p>Copyright 2025. All rights reserved.</p>
+        </footer>
     </body>
     <script src="../FinalGame/game.js"></script>
 </html>
