new place more design more stuff

--- a/Map/map.htm
+++ b/Map/map.htm
@@ -86,11 +86,16 @@
     function trees(){
         let canvas = document.querySelector('#grass');
         const graphics = canvas.getContext('2d');
+        
 
         graphics.fillStyle = "rgb(101,67,33)";
         graphics.fillRect(500,500,30,50);
 
         graphics.fillStyle = "rgb(2,89,15)";
+        graphics.fillRect(450,460,130,40);
+        graphics.fillRect(470,430,90,40);
+        graphics.fillRect(495,400,45,40);
+
         graphics.fillRect(450,460,130,40);
         graphics.fillRect(470,430,90,40);
         graphics.fillRect(495,400,45,40);
