--- a/CombatSystem/h.htm
+++ b/CombatSystem/h.htm
@@ -9,7 +9,8 @@
 </body>
 <canvas width="1000" height="500" style="background-color: black; width: 1000px; height: 500px;"></canvas>
 <script src="j.js"></script>
-
+<img style="height: 0px;" src="imagessssss/knight.png" id="knight">
+<img style="height: 0px;" src="imagessssss/gob.png" id="goblin">
 
 
 </html>
