--- a/CombatSystem/backup.htm
+++ b/CombatSystem/backup.htm
@@ -7,7 +7,8 @@
 <body>
     
 </body>
-<canvas width="1000" height="500" style="background-color: black; width: 1000px; height: 500px;"></canvas>
+<canvas id="mainCanvas" width="1000" height="500" style="background-color: black; width: 1000px; height: 500px;"></canvas>
+<canvas id="battleCanvas" width="1000" height="500" style="background-color: darkred; width: 1000px; height: 500px; display: none;"></canvas>
 <script src="j.js"></script>
 <img style="height: 0px;" src="imagessssss/knight.png" id="knight">
 <img style="height: 0px;" src="imagessssss/gob.png" id="goblin">
