--- a/CombatSystem/h.htm
+++ b/CombatSystem/h.htm
@@ -9,9 +9,10 @@
 </body>
 <canvas id="mainCanvas" width="1000" height="500" style="background-color: black; width: 1000px; height: 500px;"></canvas>
 <canvas id="battleCanvas" width="1000" height="500" style="background-color: darkred; width: 1000px; height: 500px; display: none;"></canvas>
-<script src="j.js"></script>
-<img style="height: 0px;" src="imagessssss/knight.png" id="knight">
-<img style="height: 0px;" src="imagessssss/gob.png" id="goblin">
 
+<img style="display: none;" src="imagessssss/map.png" id="map">
+<img style="display: none;" src="imagessssss/knight.png" id="knight">
+<img style="display: none;" src="imagessssss/gob.png" id="goblin">
+<script src="j.js"></script>
 
 </html>
